新增 source 增加merge distinct逻辑(原逻辑无方法控制)